--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 python:
     - "3.6"
+install:
+    - pip install -r requirements.txt
+    - pip install -e .
 cache: pip
 script: pytest
